--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "hubot-booze": "0.0.5",
     "hubot-darts": "1.0.x",
     "hubot-diagnostics": "0.0.1",
+    "hubot-flirt": "^1.0.1",
     "hubot-google-images": "^0.2.1",
     "hubot-google-translate": "^0.2.0",
     "hubot-help": "^0.1.1",
