--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
     "hubot-shorts": "0.0.14",
-    "hubot-telegram": "0.0.5"
+    "hubot-telegram": "0.0.5",
+    "jsdom": "0.8.4"
   },
   "engines": {
     "node": "0.10.x"
